--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=-3,3
+Pos=-3,-5
 Size=743,734
 
 [Window][ChessBoard]
@@ -112,7 +112,7 @@ Size=317,500
 
 [Window][RootOverlay]
 Pos=0,0
-Size=1920,1057
+Size=1187,657
 
 [Table][0xEA3D8B1F,5]
 RefScale=13
