--- a/qapla-chess-gui.vcxproj
+++ b/qapla-chess-gui.vcxproj
@@ -166,12 +166,15 @@
     <ClCompile Include="src\chess-font.cpp" />
     <ClCompile Include="src\clock-window.cpp" />
     <ClCompile Include="src\engine-window.cpp" />
+    <ClCompile Include="src\epd-data.cpp" />
+    <ClCompile Include="src\epd-window.cpp" />
     <ClCompile Include="src\font.cpp" />
     <ClCompile Include="src\board-window.cpp" />
     <ClCompile Include="src\board-data.cpp" />
     <ClCompile Include="src\imgui-table.cpp" />
     <ClCompile Include="src\inter-variable.cpp" />
     <ClCompile Include="src\move-list-window.cpp" />
+    <ClCompile Include="src\os-dialogs.cpp" />
     <ClCompile Include="src\qapla-chess-gui.cpp" />
     <ClCompile Include="src\qapla-engine\bitboardmasks.cpp" />
     <ClCompile Include="src\qapla-engine\board.cpp" />
@@ -180,6 +183,7 @@
     <ClCompile Include="src\qapla-engine\movegenerator.cpp" />
     <ClCompile Include="src\qapla-engine\piecesignature.cpp" />
     <ClCompile Include="src\qapla-engine\pst.cpp" />
+    <ClCompile Include="src\qapla-tester\adjucation-manager.cpp" />
     <ClCompile Include="src\qapla-tester\cli-settings-manager.cpp" />
     <ClCompile Include="src\qapla-tester\compute-task.cpp" />
     <ClCompile Include="src\qapla-tester\engine-adapter.cpp" />
@@ -189,9 +193,14 @@
     <ClCompile Include="src\qapla-tester\engine-report.cpp" />
     <ClCompile Include="src\qapla-tester\engine-worker-factory.cpp" />
     <ClCompile Include="src\qapla-tester\engine-worker.cpp" />
+    <ClCompile Include="src\qapla-tester\epd-manager.cpp" />
+    <ClCompile Include="src\qapla-tester\epd-reader.cpp" />
     <ClCompile Include="src\qapla-tester\game-context.cpp" />
+    <ClCompile Include="src\qapla-tester\game-manager-pool.cpp" />
+    <ClCompile Include="src\qapla-tester\game-manager.cpp" />
     <ClCompile Include="src\qapla-tester\game-record.cpp" />
     <ClCompile Include="src\qapla-tester\game-state.cpp" />
+    <ClCompile Include="src\qapla-tester\input-handler.cpp" />
     <ClCompile Include="src\qapla-tester\player-context.cpp" />
     <ClCompile Include="src\qapla-tester\tournament-result.cpp" />
     <ClCompile Include="src\qapla-tester\uci-adpater.cpp" />
@@ -203,6 +212,8 @@
     <ClInclude Include="src\clock-window.h" />
     <ClInclude Include="src\embedded-window.h" />
     <ClInclude Include="src\engine-window.h" />
+    <ClInclude Include="src\epd-data.h" />
+    <ClInclude Include="src\epd-window.h" />
     <ClInclude Include="src\font.h" />
     <ClInclude Include="src\board-window.h" />
     <ClInclude Include="src\board-data.h" />
@@ -211,6 +222,7 @@
     <ClInclude Include="src\imgui-table.h" />
     <ClInclude Include="src\inter-variable.h" />
     <ClInclude Include="src\move-list-window.h" />
+    <ClInclude Include="src\os-dialogs.h" />
     <ClInclude Include="src\qapla-engine\bitboardmasks.h" />
     <ClInclude Include="src\qapla-engine\bits.h" />
     <ClInclude Include="src\qapla-engine\board.h" />
@@ -227,6 +239,7 @@
     <ClInclude Include="src\qapla-engine\piecesignature.h" />
     <ClInclude Include="src\qapla-engine\pst.h" />
     <ClInclude Include="src\qapla-engine\types.h" />
+    <ClInclude Include="src\qapla-tester\adjucation-manager.h" />
     <ClInclude Include="src\qapla-tester\app-error.h" />
     <ClInclude Include="src\qapla-tester\cli-settings-manager.h" />
     <ClInclude Include="src\qapla-tester\compute-task.h" />
@@ -241,11 +254,17 @@
     <ClInclude Include="src\qapla-tester\engine-report.h" />
     <ClInclude Include="src\qapla-tester\engine-worker-factory.h" />
     <ClInclude Include="src\qapla-tester\engine-worker.h" />
+    <ClInclude Include="src\qapla-tester\epd-manager.h" />
+    <ClInclude Include="src\qapla-tester\epd-reader.h" />
     <ClInclude Include="src\qapla-tester\game-context.h" />
+    <ClInclude Include="src\qapla-tester\game-manager-pool.h" />
+    <ClInclude Include="src\qapla-tester\game-manager.h" />
     <ClInclude Include="src\qapla-tester\game-record.h" />
     <ClInclude Include="src\qapla-tester\game-result.h" />
     <ClInclude Include="src\qapla-tester\game-start-position.h" />
     <ClInclude Include="src\qapla-tester\game-state.h" />
+    <ClInclude Include="src\qapla-tester\game-task.h" />
+    <ClInclude Include="src\qapla-tester\input-handler.h" />
     <ClInclude Include="src\qapla-tester\logger.h" />
     <ClInclude Include="src\qapla-tester\move-record.h" />
     <ClInclude Include="src\qapla-tester\player-context.h" />
