--- a/qapla-chess-gui.vcxproj.filters
+++ b/qapla-chess-gui.vcxproj.filters
@@ -243,6 +243,9 @@
     <ClCompile Include="src\epd-data.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\qapla-tester\epd-test.cpp">
+      <Filter>Quelldateien\qapla-tester</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\font.h">
@@ -451,6 +454,9 @@
     </ClInclude>
     <ClInclude Include="src\epd-data.h">
       <Filter>Quelldateien</Filter>
+    </ClInclude>
+    <ClInclude Include="src\qapla-tester\epd-test.h">
+      <Filter>Quelldateien\qapla-tester</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
