--- a/test/engines.ini
+++ b/test/engines.ini
@@ -5,3 +5,11 @@ cmd=C:\development\qapla-chess-gui\test\Qapla.exe
 dir=.
 Hash=64
 
+[engine]
+name=Spike 1.4.1
+proto=uci
+cmd=C:\Chess\delivery\Spike1.4.1\Spike1.4.1_x64_win.exe
+dir=.
+Hash=64
+
+
