Table Bar added

--- a/qapla-chess-gui.vcxproj.filters
+++ b/qapla-chess-gui.vcxproj.filters
@@ -458,5 +458,8 @@
     <ClInclude Include="src\qapla-tester\epd-test.h">
       <Filter>Quelldateien\qapla-tester</Filter>
     </ClInclude>
+    <ClInclude Include="src\imgui-tab-bar.h">
+      <Filter>Quelldateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
