--- a/qapla-chess-gui.vcxproj
+++ b/qapla-chess-gui.vcxproj
@@ -165,6 +165,8 @@
     <ClCompile Include="src\board-workspace.cpp" />
     <ClCompile Include="src\chess-font.cpp" />
     <ClCompile Include="src\clock-window.cpp" />
+    <ClCompile Include="src\engine-data.cpp" />
+    <ClCompile Include="src\engine-setup-window.cpp" />
     <ClCompile Include="src\engine-window.cpp" />
     <ClCompile Include="src\epd-data.cpp" />
     <ClCompile Include="src\epd-window.cpp" />
@@ -212,6 +214,8 @@
     <ClInclude Include="src\chess-font.h" />
     <ClInclude Include="src\clock-window.h" />
     <ClInclude Include="src\embedded-window.h" />
+    <ClInclude Include="src\engine-data.h" />
+    <ClInclude Include="src\engine-setup-window.h" />
     <ClInclude Include="src\engine-window.h" />
     <ClInclude Include="src\epd-data.h" />
     <ClInclude Include="src\epd-window.h" />
@@ -220,6 +224,7 @@
     <ClInclude Include="src\board-data.h" />
     <ClInclude Include="src\horizontal-split-container.h" />
     <ClInclude Include="src\imgui-button.h" />
+    <ClInclude Include="src\imgui-controls.h" />
     <ClInclude Include="src\imgui-tab-bar.h" />
     <ClInclude Include="src\imgui-table.h" />
     <ClInclude Include="src\inter-variable.h" />
