--- a/imgui.ini
+++ b/imgui.ini
@@ -114,6 +114,10 @@ Size=317,500
 Pos=0,0
 Size=1400,800
 
+[Window][Select Engines]
+Pos=457,63
+Size=400,300
+
 [Table][0xEA3D8B1F,5]
 RefScale=13
 Column 0  Width=80
