--- a/test/engines.ini
+++ b/test/engines.ini
@@ -4,6 +4,7 @@ proto=uci
 cmd=C:\development\qapla-chess-gui\test\Qapla.exe
 dir=.
 Hash=64
+trace=all
 
 [engine]
 name=Spike 1.4.1
@@ -11,5 +12,6 @@ proto=uci
 cmd=C:\Chess\delivery\Spike1.4.1\Spike1.4.1_x64_win.exe
 dir=.
 Hash=64
+trace=all
 
 
