--- a/qapla-chess-gui.vcxproj
+++ b/qapla-chess-gui.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="src\font.cpp" />
     <ClCompile Include="src\board-window.cpp" />
     <ClCompile Include="src\board-data.cpp" />
+    <ClCompile Include="src\imgui-button.cpp" />
     <ClCompile Include="src\imgui-table.cpp" />
     <ClCompile Include="src\inter-variable.cpp" />
     <ClCompile Include="src\move-list-window.cpp" />
