--- a/imgui.ini
+++ b/imgui.ini
@@ -115,8 +115,12 @@ Pos=0,0
 Size=1400,800
 
 [Window][Select Engines]
-Pos=457,63
+Pos=457,65
 Size=400,300
+
+[Window][##Snackbar]
+Pos=20,740
+Size=583,32
 
 [Table][0xEA3D8B1F,5]
 RefScale=13
