added tournament capabilities, started

--- a/qapla-chess-gui.vcxproj
+++ b/qapla-chess-gui.vcxproj
@@ -216,6 +216,8 @@
     <ClCompile Include="src\qapla-tester\uci-adpater.cpp" />
     <ClCompile Include="src\qapla-tester\winboard-adapter.cpp" />
     <ClCompile Include="src\time-control-window.cpp" />
+    <ClCompile Include="src\tournament-data.cpp" />
+    <ClCompile Include="src\tournament-window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\board-workspace.h" />
@@ -301,6 +303,8 @@
     <ClInclude Include="src\qapla-tester\winboard-adapter.h" />
     <ClInclude Include="src\snackbar.h" />
     <ClInclude Include="src\time-control-window.h" />
+    <ClInclude Include="src\tournament-data.h" />
+    <ClInclude Include="src\tournament-window.h" />
     <ClInclude Include="src\vertical-split-container.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
