--- a/qapla-chess-gui.vcxproj.filters
+++ b/qapla-chess-gui.vcxproj.filters
@@ -276,6 +276,12 @@
     <ClCompile Include="src\engine-capabilities.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\tournament-window.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="src\tournament-data.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\font.h">
@@ -528,6 +534,12 @@
       <Filter>Quelldateien</Filter>
     </ClInclude>
     <ClInclude Include="src\snackbar.h">
+      <Filter>Quelldateien</Filter>
+    </ClInclude>
+    <ClInclude Include="src\tournament-window.h">
+      <Filter>Quelldateien</Filter>
+    </ClInclude>
+    <ClInclude Include="src\tournament-data.h">
       <Filter>Quelldateien</Filter>
     </ClInclude>
   </ItemGroup>
