--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /imgui/
 /glfw/
 /build/
+/engines/
 
 
 # User-specific files
@@ -16,6 +17,7 @@
 *.userosscache
 *.sln.docstates
 *.epd
+*.DS_Store
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
