engine window for tournament started

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "ARM"
     ],
     "files.associations": {
-        "*.h": "cpp"
+        "*.h": "cpp",
+        "string": "cpp"
     }
 }
