--- a/imgui.ini
+++ b/imgui.ini
@@ -122,6 +122,14 @@ Size=400,300
 Pos=20,660
 Size=450,120
 
+[Window][RootOverlay/hsplit_5596272960_right_E792E5F7/##vsplit_5576365456_bottom_2737740C/TableScroll_E3ABAF02]
+IsChild=1
+Size=831,134
+
+[Window][RootOverlay/hsplit_5596272960_right_E792E5F7/##vsplit_5576365456_bottom_2737740C/TableScroll_D2DA7B32]
+IsChild=1
+Size=831,134
+
 [Table][0xEA3D8B1F,5]
 RefScale=13
 Column 0  Width=80
