--- a/imgui.ini
+++ b/imgui.ini
@@ -130,6 +130,10 @@ Size=831,134
 IsChild=1
 Size=831,134
 
+[Window][Debug]
+Pos=60,60
+Size=83,54
+
 [Table][0xEA3D8B1F,5]
 RefScale=13
 Column 0  Width=80
