--- a/imgui.ini
+++ b/imgui.ini
@@ -14,6 +14,10 @@ Size=450,120
 Pos=500,250
 Size=400,300
 
+[Window][Game Filters]
+Pos=60,60
+Size=56,44
+
 [Table][0x2E7FB189,10]
 RefScale=16
 Column 0  Sort=0v
