CMakeLists fixes for linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,5 +82,8 @@ elseif(APPLE)
   )
 elseif(UNIX)
   find_package(OpenGL REQUIRED)
-  target_link_libraries(qapla PRIVATE ${OPENGL_LIBRARIES} dl pthread)
+  find_package(PkgConfig REQUIRED)
+  pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+  target_include_directories(qapla PRIVATE ${GTK3_INCLUDE_DIRS})
+  target_link_libraries(qapla PRIVATE ${OPENGL_LIBRARIES} ${GTK3_LIBRARIES} dl pthread)
 endif()
