updated sonar configuration

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,15 +6,30 @@ sonar.organization=mangar2
 sonar.projectName=qapla-chess-gui
 sonar.projectVersion=1.0
 
-# Source Code Directories
-sonar.sources=src,extern/qapla-engine-tester/src
+# Source Code Directories - alles für erfolgreichen Build
+sonar.sources=.
 
-# Exclusions
+# Exclusions für Analyse
 sonar.exclusions=src/data/**
+
+# Issues nur für src und extern/qapla-engine-tester/src anzeigen
+sonar.issue.ignore.multicriteria=e1,e2,e3
+
+# Exclude extern/** außer qapla-engine-tester/src
+sonar.issue.ignore.multicriteria.e1.ruleKey=*
+sonar.issue.ignore.multicriteria.e1.resourceKey=extern/**
+
+# Include extern/qapla-engine-tester/src wieder
+sonar.issue.ignore.multicriteria.e2.ruleKey=*
+sonar.issue.ignore.multicriteria.e2.resourceKey=extern/qapla-engine-tester/src/**
+
+# Exclude alle anderen Verzeichnisse außer src
+sonar.issue.ignore.multicriteria.e3.ruleKey=*
+sonar.issue.ignore.multicriteria.e3.resourceKey=!src/**,!extern/qapla-engine-tester/src/**
+
+# Code Coverage & Analysis
+sonar.coverage.exclusions=**/data/**,extern/**,!extern/qapla-engine-tester/src/**
+sonar.cpd.exclusions=**/data/**,extern/**,!extern/qapla-engine-tester/src/**
 
 # Source Encoding
 sonar.sourceEncoding=UTF-8
-
-# C++ Specific Settings
-sonar.language=c++
-sonar.cfamily.build-wrapper-output=build/bw-output
