--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,4 +1,5 @@
 name: SonarCloud Analysis
+
 on:
   push:
     branches:
@@ -8,19 +9,25 @@ on:
 
 jobs:
   sonarcloud:
-    name: SonarCloud
+    name: SonarCloud Scan
     runs-on: ubuntu-latest
     
+    env:
+      BUILD_WRAPPER_OUT_DIR: build_wrapper_output_directory
+    
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          submodules: recursive  # Wichtig: Submodule laden
+          submodules: recursive
       
       - name: Install Dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y \
+            cmake \
+            ninja-build \
             libgl1-mesa-dev \
             libglu1-mesa-dev \
             xorg-dev \
@@ -36,13 +43,12 @@ jobs:
       - name: Configure CMake
         run: cmake --preset=default
       
-      - name: Run build-wrapper
+      - name: Build with build-wrapper
         run: |
-          build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} cmake --build build
+          build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} cmake --build --preset=default
       
-      - name: Run sonar-scanner
+      - name: Run SonarCloud analysis
+        uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          sonar-scanner --define sonar.cfamily.compile-commands="${{ env.BUILD_WRAPPER_OUT_DIR }}/compile_commands.json"
