--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -28,6 +28,8 @@ jobs:
           sudo apt-get install -y \
             cmake \
             ninja-build \
+            libc++-dev \
+            libc++abi-dev \
             libgl1-mesa-dev \
             libglu1-mesa-dev \
             xorg-dev \
