fixes for sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,8 +9,14 @@ sonar.projectVersion=1.0
 # Source Code Directories - alles für erfolgreichen Build
 sonar.sources=.
 
+# Test directories
+sonar.tests=test
+
 # Exclusions für Analyse
-sonar.exclusions=src/data/**
+sonar.exclusions=src/data/**,test/**,.sonar/**
+
+# C/C++ compile commands
+sonar.cfamily.compile-commands=build/default/compile_commands.json
 
 # Issues nur für src und extern/qapla-engine-tester/src anzeigen
 sonar.issue.ignore.multicriteria=e1,e2,e3
